# shaft

./: .gitignore  Cargo.toml  Dockerfile  README.md  Xargo.toml  settings-example.toml
docker/: Dockerfile-debug  Dockerfile-slim
res/: base.hbs  index.hbs  login.hbs  transactions.hbs
res/static/: colors.css
src/: db.rs  error.rs  github.rs  lib.rs  main.rs  settings.rs
src/db/: mod.rs  postgres.rs  sqlite.rs
src/rest/: api.rs  auth.rs  body_parser.rs  github_login.rs  logger.rs  mod.rs  static_files.rs  web.rs
tests/: github_login.rs
