[package]
authors = ["Erik Johnston"]
name = "shaft"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.0"
config = "0.9.0"
daemonize = "0.4.0"
futures = "0.1.14"
futures-cpupool = "0.1.5"
handlebars = "1.0"
hyper = "0.12"
hyper-tls = "0.3"
itertools = "0.8.0"
quick-error = "1.2.0"
r2d2 = "0.8.0"
r2d2_sqlite = "0.9.0"
rand = "0.6.5"
rusqlite = "0.17.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.4.0"
slog-async = "2.3.0"
slog-term = "2.4.0"
sloggers = "0.3.0"
toml = "0.5.0"
url = "1.7.2"
actix-web = "0.7.0"
cookie = "0.11.0"
clap = "2.33.0"
actix = "0.7.0"

[dependencies.linear-map]
features = ["serde_impl"]
version = "1.2.0"

[dependencies.openssl]
version = "0.10"
#features = ["vendored"]

[features]
bundled = ["openssl/vendored", "rusqlite/bundled"]

[profile.release]
lto = true
#codegen-units = 1
#opt-level = "z"
#panic = "abort"
