[package]
authors = ["Erik Johnston"]
name = "shaft"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.0"
config = "0.9.0"
daemonize = "0.4.0"
futures = "0.1.14"
futures-cpupool = "0.1.5"
handlebars = "2.0.1"
hyper = "0.12"
hyper-tls = "0.3"
itertools = "0.8.0"
openssl = "0.10"
quick-error = "1.2.0"
r2d2 = "0.8.0"
r2d2_sqlite = "0.12.0"
rand = "0.7.0"
rusqlite = "0.20.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.4.0"
slog-async = "2.3.0"
slog-term = "2.4.0"
sloggers = "0.3.0"
toml = "0.5.0"
url = "2.1.0"
actix-web = "1.0.0"
cookie = "0.12.0"
clap = "2.33.0"
actix-rt = "0.2.2"
actix-files = "0.1.1"
actix-service = "0.4.1"
actix-http = "0.2.3"
postgres = "0.15.2"
r2d2_postgres = "0.14.0"

[dependencies.linear-map]
features = ["serde_impl"]
version = "1.2.0"

[dependencies.snafu]
features = ["futures-01"]
version = "0.4.0"

[features]
bundled = ["openssl/vendored", "rusqlite/bundled"]

[profile.release]
lto = true
#codegen-units = 1
#opt-level = "z"
#panic = "abort"
