[package]
authors = ["Erik Johnston"]
name = "shaft"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.10"
config = "0.10.1"
daemonize = "0.4.1"
futures-cpupool = "0.1.8"
handlebars = "3.0.0"
hyper = "0.13.1"
hyper-tls = "0.4.1"
itertools = "0.8.2"
openssl = "0.10.26"
quick-error = "1.2.3"
r2d2 = "0.8.8"
r2d2_sqlite = "0.14.0"
rand = "0.7.3"
rusqlite = "0.21.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.45"
slog = "2.5.2"
slog-async = "2.3.0"
slog-term = "2.4.2"
sloggers = "0.3.5"
toml = "0.5.6"
url = "2.1.1"
actix-web = "2.0.0"
clap = "2.33.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-service = "1.0.5"
actix-http = "1.0.1"
postgres = "0.17.0"
r2d2_postgres = "0.16.0"
futures-util = "0.3.11"
bytes = "0.5.4"
http = "0.2.0"
mockall = "0.6.0"
awc = "1.0.1"

[dependencies.futures]
version = "0.3.1"
features = ["thread-pool", "compat"]

[dependencies.tokio]
version = "0.2.10"
features = [ "rt-threaded" ]

[dependencies.linear-map]
features = ["serde_impl"]
version = "1.2.0"

[dependencies.snafu]
features = ["futures"]
version = "0.6.2"

[features]
bundled = ["openssl/vendored", "rusqlite/bundled"]

[profile.release]
lto = true
#codegen-units = 1
#opt-level = "z"
#panic = "abort"
